kubelet/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    template: kubebox
  name: kubebox
  selfLink: /api/v1/namespaces/default/services/kubebox
spec:
  ports:
  - name: kubebox
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: kubebox
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
